--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
                 <div class="modal-footer">
                     <div id="total"></div>
-                    <button type="button" class="btn btn-secondary">Finalizar compra</button>
+                    <button type="button" class="btn btn-secondary" id="error">Finalizar compra</button>
                 </div>
             </div>
         </div>
     </section>
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
