--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <div class="modal-footer">
                     <div id="total"></div>
-                    <button type="button" class="btn btn-secondary" id="error">Finalizar compra</button>
+                    <button type="button" class="btn btn-secondary">Finalizar compra</button>
                 </div>
             </div>
         </div>
