--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/whatsapp.css">
+
     <link rel="shortcut icon" href="img/favicon.png">
     <title>javascript</title>
 </head>
@@ -44,7 +48,6 @@
             </span>
         </section>
     </nav>
-
     <section class="container">
         <div class="row text-center" id="tienda"></div>
     </section>
@@ -69,8 +72,31 @@
             </div>
         </div>
     </section>
+    <div class="nav-bottom">
+        <div class="popup-whatsapp fadeIn">
+            <div class="content-whatsapp -top">
+                <button type="button" class="btn-close closePopup">
+                    <i class="material-icons icon-font-color"></i>
+                </button>
+                <p><img src="img/logobikestore.png" width="50">Hola, en que podemos ayudarte?</p>
+            </div>
+            <div class="content-whatsapp -bottom">
+            <input class="whats-input" id="whats-in" type="text" Placeholder="Enviar mensaje..." />
+                <button class="send-msPopup" id="send-btn" type="button">
+                    <img src="img/enviar.png" width="25">
+                    <i class="material-icons icon-font-color--black"></i>
+                </button>
+            </div>
+        </div>
+            <button type="button" id="whats-openPopup" class="whatsapp-button">
+                <div class="float" >
+                    <i class="fa fa-whatsapp my-float"></i></div>
+            </button>
+        <div class="circle-anime"></div>         
+    </div>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/main.js"></script>
+<script src="js/whatsapp.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 crossorigin="anonymous"></script>
