--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -102,7 +102,7 @@
                 <button type="button" class="btn-close closePopup">
                     <i class="material-icons icon-font-color"></i>
                 </button>
-                <p><img src="../img/wap.gif" class="rounded-pill" width="50"> Hola, en que podemos ayudarte?</p>
+                <p><img src="../img/logobikestore.png" width="50">Hola, en que podemos ayudarte?</p>
             </div>
             <div class="content-whatsapp -bottom">
             <input class="whats-input" id="whats-in" type="text" Placeholder="Enviar mensaje..." />
