--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item text-white-50" href="index.html">bicicletas</a></li>
+							<!-- <li><a class="dropdown-item text-white-50" href="#">Route bike</a></li>
+							<li><a class="dropdown-item text-white-50" href="#">Accesorios y repuestos</a></li> -->
 						</ul>
 					</li>
 					<li class="nav-menu-item">
@@ -79,7 +81,7 @@
                 <button type="button" class="btn-close closePopup">
                     <i class="material-icons icon-font-color"></i>
                 </button>
-                <p><img src="img/wap.gif" class="rounded-pill" width="50"> Hola, en que podemos ayudarte?</p>
+                <p><img src="img/logobikestore.png" width="50">Hola, en que podemos ayudarte?</p>
             </div>
             <div class="content-whatsapp -bottom">
             <input class="whats-input" id="whats-in" type="text" Placeholder="Enviar mensaje..." />
@@ -106,8 +108,8 @@
 		</div>	
 	</footer>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/main.js" type="module"></script>
-<script src="js/whatsapp.js" type="module"></script>
+<script src="js/main.js"></script>
+<script src="js/whatsapp.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 crossorigin="anonymous"></script>
