--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,8 +33,6 @@
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item text-white-50" href="../index.html">bicicletas</a></li>
-							<!-- <li><a class="dropdown-item text-white-50" href="../pages/ruta.html">Route bike</a></li>
-							<li><a class="dropdown-item text-white-50" href="../pages/accesoriosyrepuestos.html">Accesorios y repuestos</a></li> -->
 						</ul>
 					</li>
 					<li class="nav-menu-item">
@@ -102,7 +100,7 @@
                 <button type="button" class="btn-close closePopup">
                     <i class="material-icons icon-font-color"></i>
                 </button>
-                <p><img src="../img/logobikestore.png" width="50">Hola, en que podemos ayudarte?</p>
+                <p><img src="../img/wap.gif" class="rounded-pill" width="50"> Hola, en que podemos ayudarte?</p>
             </div>
             <div class="content-whatsapp -bottom">
             <input class="whats-input" id="whats-in" type="text" Placeholder="Enviar mensaje..." />
